--- a/EverCraftKata/EverCraftKata.csproj
+++ b/EverCraftKata/EverCraftKata.csproj
@@ -53,7 +53,7 @@
     <Compile Include="When_bob_attacks.cs" />
     <Compile Include="When_creating_a_new_character.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="When_modifying_attributes.cs" />
+    <Compile Include="When_attacking.cs" />
     <Compile Include="When_taking_damage.cs" />
     <Compile Include="When_working_with_abilities.cs" />
   </ItemGroup>
